--- a/panda.html
+++ b/panda.html
@@ -7,7 +7,7 @@
     <title>Panda</title>
     <link href = "panda.css" rel = "StyleSheet">
 </head>
-<body>
+<body onload = "window.scroll(0, document.documentElement.scrollHeight)">
     <div  class = "walkPanda"></div>
 </body>
 </html>
