--- a/panda1.html
+++ b/panda1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda</title>
-    <link href = "panda.css" rel = "StyleSheet">
+    <link href = "panda1.css" rel = "StyleSheet">
 </head>
 <body onload = "window.scroll(0, document.documentElement.scrollHeight)">
     <div  class = "walkPanda"></div>
